[project]
name = "voice-agent-runtime"
version = "0.1.4"
description = "Reusable voice agent runtime for Healix LiveKit agents (STT routing, language state, handoff)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "livekit-agents>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voice_agent_runtime"]
